<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_prayer_content_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:viewBindingIgnore="true"> <!-- Optional, as discussed -->

    <FrameLayout
        android:id="@+id/flLocationContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textAlignment="center"
            tools:text="Mecca, Saudi Arabia" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flDateContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/flLocationContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textAlignment="center"
            tools:text="Date: 01 Jan 2024" />
    </FrameLayout>

    <!-- Fajr Time -->
    <FrameLayout
        android:id="@+id/flFajrContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flDateContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_fajr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_fajr"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_fajr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="05:00" />
    </FrameLayout>

    <!-- Sunrise Time -->
    <FrameLayout
        android:id="@+id/flSunriseContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flFajrContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_sunrise_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_sunrise"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="06:30" />
    </FrameLayout>

    <!-- Dhuhr Time -->
    <FrameLayout
        android:id="@+id/flDhuhrContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flSunriseContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_dhuhr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_dhuhr"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_dhuhr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="12:30" />
    </FrameLayout>

    <!-- Asr Time -->
    <FrameLayout
        android:id="@+id/flAsrContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flDhuhrContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_asr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_asr"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_asr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="15:45" />
    </FrameLayout>

    <!-- Maghrib Time -->
    <FrameLayout
        android:id="@+id/flMaghribContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flAsrContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/header_text_view_maghrib_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_maghrib"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_maghrib_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="18:30" />
    </FrameLayout>

    <!-- Isha Time -->
    <FrameLayout
        android:id="@+id/flIshaContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/flMaghribContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" > <!-- Make last item constrain to bottom if desired -->

        <TextView
            android:id="@+id/header_text_view_isha_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prayer_isha"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/header_text_view_isha_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:layout_gravity="end|center_vertical"
            tools:text="20:00" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
